--- a/Aegis.Web/wwwroot/index.html
+++ b/Aegis.Web/wwwroot/index.html
@@ -12,7 +12,7 @@
     <link href="Aegis.Web.styles.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="text-light">
     <div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
